[gd_scene load_steps=8 format=3 uid="uid://dnd77rbtrgucn"]

[ext_resource type="Script" path="res://scenes/meteor.gd" id="1_o2ku6"]
[ext_resource type="Texture2D" uid="uid://c6mq1bnafbef7" path="res://grafics/asteroid.png" id="1_s8j3x"]
[ext_resource type="AudioStream" uid="uid://btp14rli3nlcm" path="res://audio/asteroid-hitting-something-152511.mp3" id="3_a80ij"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p5xsc"]

[sub_resource type="Gradient" id="Gradient_1bd43"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_j7fup"]
gradient = SubResource("Gradient_1bd43")
width = 100

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l3csf"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 49.5
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_max = 73.68
gravity = Vector3(0, 0, 0)
scale_max = 7.0
color = Color(1, 0.403922, 0.380392, 1)
color_ramp = SubResource("GradientTexture1D_j7fup")
hue_variation_min = -0.14

[node name="meteor" type="Area2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_o2ku6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 2.38419e-07)
rotation = 2.53503
scale = Vector2(4.19197, -3.56198)
shape = SubResource("CapsuleShape2D_p5xsc")

[node name="meteorimage" type="Sprite2D" parent="."]
position = Vector2(-2, 6)
texture = ExtResource("1_s8j3x")

[node name="explosionsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_a80ij")
volume_db = -1.874
bus = &"eventsounds"

[node name="explosion_particle" type="GPUParticles2D" parent="."]
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_l3csf")
one_shot = true
speed_scale = 4.88
trail_enabled = true
trail_lifetime = 0.2
trail_sections = 9

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
